# autoinfra

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  content.txt  test.txt
autoinfra/dl/oldsrc/old_backend/cpu/: cpu_alloc.hpp  cpu_backend.cpp  cpu_backend.hpp  cpu_tensor.cpp  cpu_tensor.hpp
autoinfra/dl/oldsrc/old_backend/cuda/: cuda_alloc.hpp  cuda_backend.hpp  cuda_tensor.hpp
autoinfra/dl/oldsrc/old_core/: core.hpp
autoinfra/dl/oldsrc/old_core/abstract/: allocator.hpp  dtype.hpp
autoinfra/dl/oldsrc/old_core/backend/: backend.hpp  code_generator.hpp  dv.hpp
autoinfra/dl/oldsrc/old_core/compiler_toolchain/: execution_plan.hpp  graph.hpp  graph_builder.hpp  graph_optimizer.hpp
autoinfra/dl/oldsrc/old_core/model/: model.hpp
autoinfra/dl/src/backend/cpu/: backend.hpp  buffer.hpp  device.hpp  tensor.hpp
autoinfra/dl/src/core/: allocator.hpp  backend.hpp  backend_manager.hpp  buffer.hpp  compiler.hpp  datatype.hpp  device.hpp  dtype.hpp  graph.hpp  shape.hpp  tensor.hpp
autoinfra/dl/src/cpu/: cpu_tensor.hpp
autoinfra/dl/src/example/: model_use.cpp  tensor.cpp
include/tensor/: tensor.hpp
python_api/: bindings.cpp
src/: main.cpp
src/deep-learning/cpu/numerical/: base.hpp  elementwise.hpp  implement.hpp  ops.hpp  range.hpp  reductions.hpp  scalar.hpp  slice.hpp  tensor.hpp
src/deep-learning/experimental/: device.hpp  gpubuffer.hpp
src/deep-learning/experimental/numerical/: buffer.hpp  range.hpp  tensor.hpp
src/deep-learning/numerical/: broadcast.hpp  buffer.hpp  device.hpp  gpubuffer.hpp  ndarray.hpp  range.hpp  slice.cpp  tensor.cpp  tensor.hpp
src/tensor/: tensor.cpp
test/: test_tensor.cpp
tests/: tensor_test.cpp
